frontend/deploy/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aro-hcp-frontend
  name: aro-hcp-frontend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: aro-hcp-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: aro-hcp-frontend
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: frontend
      containers:
        - name: aro-hcp-frontend
          image: IMAGE_NAME
          imagePullPolicy: Always
          args: ["--clusters-service-url", "http://clusters-service.cluster-service.svc.cluster.local:8000"]
          ports:
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 500Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8443
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8443
            initialDelaySeconds: 5
            periodSeconds: 10
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
