frontend/deploy/base/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aro-hcp-frontend
  name: aro-hcp-frontend
spec:
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: aro-hcp-frontend
  type: ClusterIP
