frontend/deploy/base/networking.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aro-hcp-frontend
  name: aro-hcp-frontend
spec:
  ports:
    - port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    app: aro-hcp-frontend
  type: ClusterIP

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: aro-hcp-gateway-external
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: aro-hcp-vs-frontend
spec:
  hosts:
    - "*"
  gateways:
    - aro-hcp-gateway-external
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: aro-hcp-frontend
            port:
              number: 8443
