frontend/deploy/base/allow-metrics.authorizationpolicy.yml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-metrics
  namespace: aro-hcp
spec:
  action: "ALLOW"
  rules:
    - to:
      - operation:
          paths: ["/metrics"]
          methods: ["GET"]
          ports: ["8081"]
  selector:
    matchLabels:
      app: "aro-hcp-frontend"
